fix: corrected layout issues in styles.css

--- a/styless.css
+++ b/styless.css
@@ -94,6 +94,24 @@ body {
   display: none;
 }
 
+#error-message {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #d73c3c;
+  display: none;
+}
+
+#error-message-input {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #d73c3c;
+  display: none;
+}
+
 .query-type {
   transform: translate(-48px, 10px);
 }
